Add EMI FAQs and chatbot suggestions

--- a/rasa-bot/data/nlu.yml
+++ b/rasa-bot/data/nlu.yml
@@ -65,3 +65,9 @@ nlu:
     - quién es el jefe de soporte?
     - qué debo hacer si olvidé mi contraseña?
     - cómo solicito materiales?
+    - cuáles son las modalidades de admisión a la emi?
+    - qué requisitos necesito para ingresar a la emi?
+    - qué es la prueba de suficiencia académica psa?
+    - cómo obtengo la libreta de servicio militar en la emi?
+    - qué carreras ofrece la emi?
+    - cuáles son los horarios de atención?
