Add slot mapping for fecha_actualizacion

--- a/rasa-bot/domain.yml
+++ b/rasa-bot/domain.yml
@@ -99,6 +99,8 @@ slots:
   fecha_actualizacion:
     type: text
     influence_conversation: false
+    mappings:
+    - type: custom
 
 actions:
   - action_validar_problema
